Moved AbstractUnmod Map/Set/Iterable to top-level classes.  Changed Option.of() to option.some().